Fixed spacing issue of conact page

--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -22,7 +22,7 @@ body.contact-body{
   position:relative;
   min-height:100vh;
   overflow:hidden;
-  padding:150px 90px 90px;
+  padding:250px 90px 90px;
   padding-bottom: 0;
   background:
   radial-gradient(circle at top left,
